--- a/downloads.html
+++ b/downloads.html
@@ -1,132 +1,218 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html><html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Finance Materials | Finance Point</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet">
+  <title>Admin Panel | Finance Point</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <style>
     body {
-      font-family: 'Poppins', sans-serif;
-      background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
+      margin: 0;
+      font-family: 'Inter', sans-serif;
+      background-color: #121212;
       color: white;
       padding: 2rem;
     }
-
     h1 {
-      color: #ffd700;
-      text-align: center;
-      margin-bottom: 1.5rem;
+      color: #00B386;
     }
-
-    .search-box {
-      max-width: 500px;
-      margin: 0 auto 2rem;
+    .section {
+      background-color: #1f1f2e;
+      padding: 1.5rem;
+      border-radius: 1rem;
+      margin-bottom: 2rem;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.4);
     }
-
-    .search-box input {
+    .section h2 {
+      color: #00B386;
+      margin-top: 0;
+    }
+    label, input, textarea, button {
+      display: block;
       width: 100%;
-      padding: 10px 15px;
-      border-radius: 8px;
+      margin-bottom: 1rem;
+    }
+    input, textarea {
+      padding: 0.75rem;
+      background: #121212;
+      color: white;
+      border: 1px solid #444;
+      border-radius: 0.5rem;
+    }
+    button {
+      background-color: #00B386;
       border: none;
-      font-size: 16px;
-      outline: none;
+      padding: 0.75rem;
+      border-radius: 0.5rem;
+      color: white;
+      font-weight: 600;
+      cursor: pointer;
     }
-
-    .file-list {
-      max-width: 800px;
-      margin: 0 auto;
-      display: grid;
-      gap: 15px;
-    }
-
-    .file-item {
-      background: rgba(255, 255, 255, 0.08);
+    .pending-item {
+      background: #222;
       padding: 1rem;
-      border-radius: 10px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
+      margin-bottom: 1rem;
+      border-left: 4px solid #00B386;
+      border-radius: 8px;
     }
-
-    .file-item span {
-      font-weight: 500;
+    .pending-item h4 {
+      margin: 0 0 0.5rem;
+      color: #ffd700;
     }
-
-    .file-item a {
-      background: #ffd700;
-      color: #000;
-      padding: 8px 14px;
-      border-radius: 6px;
-      text-decoration: none;
-      font-weight: bold;
-      transition: 0.3s;
-    }
-
-    .file-item a:hover {
-      background: #e6c200;
-    }
-
-    footer {
-      margin-top: 3rem;
-      text-align: center;
-      color: #bbb;
-      font-size: 14px;
+    .pending-item button {
+      margin-right: 1rem;
     }
   </style>
 </head>
 <body>
-  <h1>📘 Finance Study Materials</h1>
+  <h1>🛠️ Admin Panel - Finance Point</h1>  <div class="section">
+    <h2>📢 Post Announcement</h2>
+    <label>Title:</label>
+    <input type="text" id="announcementTitle">
+    <label>Message:</label>
+    <textarea id="announcementBody"></textarea>
+    <button onclick="postAnnouncement()">Post Announcement</button>
+  </div>  <div class="section">
+    <h2>👥 Add Executive</h2>
+    <label>Name:</label>
+    <input type="text" id="execName">
+    <label>Role:</label>
+    <input type="text" id="execRole">
+    <button onclick="addExecutive()">Add Executive</button>
+  </div>  <div class="section">
+    <h2>📅 Add Event</h2>
+    <label>Event Title:</label>
+    <input type="text" id="eventTitle">
+    <label>Date:</label>
+    <input type="text" id="eventDate">
+    <label>Location:</label>
+    <input type="text" id="eventLocation">
+    <button onclick="addEvent()">Add Event</button>
+  </div>  <div class="section">
+    <h2>🎂 Add Birthday Wish</h2>
+    <label>Name:</label>
+    <input type="text" id="bdayName">
+    <label>Message:</label>
+    <textarea id="bdayMsg"></textarea>
+    <label>Image URL (optional):</label>
+    <input type="text" id="bdayImage">
+    <button onclick="addBirthday()">Add Birthday</button>
+  </div>  <div class="section">
+    <h2>📘 Upload Finance Material</h2>
+    <label>Material Title:</label>
+    <input type="text" id="materialTitle">
+    <label>Download Link:</label>
+    <input type="text" id="materialLink">
+    <button onclick="addMaterial()">Add Material</button>
+  </div>  <div class="section">
+    <h2>🧾 Pending Lost & Found Submissions</h2>
+    <div id="pendingContainer"><p>Loading...</p></div>
+  </div>  <script>
+    const MATERIAL_API = "https://api.jsonstorage.net/v1/json/d33236c3-a3da-4c87-8d18-eeeb899d034a/63853063-9eb3-46ff-a551-9e3e1b19bf8a";
+    const LOSTFOUND_API = "https://api.jsonstorage.net/v1/json/d33236c3-a3da-4c87-8d18-eeeb899d034a/a0a80090-14fe-4a0f-a6e2-7ab3e97bd42d";
+    const LOSTFOUND_PENDING_API = "https://api.jsonstorage.net/v1/json/d33236c3-a3da-4c87-8d18-eeeb899d034a/b40a296b-90e2-49bb-ad28-5ca202f6543b";
 
-  <div class="search-box">
-    <input type="text" id="searchInput" placeholder="Search materials... (e.g., risk, capital, investment)" onkeyup="filterFiles()">
-  </div>
+    async function fetchPending() {
+      const container = document.getElementById("pendingContainer");
+      try {
+        const res = await fetch(LOSTFOUND_PENDING_API);
+        let pending = await res.json();
+        if (!pending.length) {
+          container.innerHTML = '<p>No pending items.</p>';
+          return;
+        }
+        container.innerHTML = "";
+        pending.forEach((item, index) => {
+          const div = document.createElement("div");
+          div.className = "pending-item";
+          div.innerHTML = `
+            <h4>${item.item}</h4>
+            <p><strong>By:</strong> ${item.name}</p>
+            <p>${item.desc}</p>
+            <button onclick="approveItem(${index})">Approve</button>
+            <button onclick="rejectItem(${index})">Reject</button>
+          `;
+          container.appendChild(div);
+        });
+      } catch (e) {
+        container.innerHTML = '<p>Error loading pending items.</p>';
+      }
+    }
 
-  <div class="file-list" id="fileList">
-    <!-- Files will be inserted here -->
-  </div>
+    async function approveItem(index) {
+      const pending = await (await fetch(LOSTFOUND_PENDING_API)).json();
+      const approved = await (await fetch(LOSTFOUND_API)).json();
+      approved.push(pending[index]);
+      pending.splice(index, 1);
+      await fetch(LOSTFOUND_API, {
+        method: "PUT",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify(approved)
+      });
+      await fetch(LOSTFOUND_PENDING_API, {
+        method: "PUT",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify(pending)
+      });
+      fetchPending();
+    }
 
-  <footer>&copy; 2025 Finance Point • Created by OBA</footer>
+    async function rejectItem(index) {
+      const pending = await (await fetch(LOSTFOUND_PENDING_API)).json();
+      pending.splice(index, 1);
+      await fetch(LOSTFOUND_PENDING_API, {
+        method: "PUT",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify(pending)
+      });
+      fetchPending();
+    }
 
-  <script>
-    const materials = [
-      { name: "Introduction to Financial Accounting", url: "#" },
-      { name: "Principles of Investment Analysis", url: "#" },
-      { name: "Risk Management Overview", url: "#" },
-      { name: "Capital Budgeting Techniques", url: "#" },
-      { name: "Financial Markets & Institutions", url: "#" },
-      { name: "Corporate Finance Handout", url: "#" },
-      { name: "Microfinance Lecture Slides", url: "#" },
-      { name: "Banking Regulations Notes", url: "#" },
-      { name: "Understanding Balance Sheets", url: "#" }
-    ];
+    async function addMaterial() {
+      const title = document.getElementById('materialTitle').value.trim();
+      const link = document.getElementById('materialLink').value.trim();
 
-    const fileList = document.getElementById('fileList');
-
-    function renderFiles(data) {
-      fileList.innerHTML = "";
-      if (data.length === 0) {
-        fileList.innerHTML = "<p>No matching materials found.</p>";
+      if (!title || !link) {
+        alert("Please enter both title and download link.");
         return;
       }
-      data.forEach(item => {
-        const div = document.createElement('div');
-        div.className = 'file-item';
-        div.innerHTML = `
-          <span>${item.name}</span>
-          <a href="${item.url}" download>Download</a>
-        `;
-        fileList.appendChild(div);
-      });
+
+      try {
+        const res = await fetch(MATERIAL_API);
+        const materials = await res.json();
+
+        materials.push({ name: title, url: link });
+
+        await fetch(MATERIAL_API, {
+          method: "PUT",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify(materials)
+        });
+
+        alert("✅ Material added successfully!");
+        document.getElementById('materialTitle').value = "";
+        document.getElementById('materialLink').value = "";
+      } catch (err) {
+        alert("❌ Failed to add material.");
+        console.error(err);
+      }
     }
 
-    function filterFiles() {
-      const query = document.getElementById('searchInput').value.toLowerCase();
-      const filtered = materials.filter(m => m.name.toLowerCase().includes(query));
-      renderFiles(filtered);
+    function postAnnouncement() {
+      alert("📢 Announcement Posted (simulation)");
     }
 
-    renderFiles(materials);
-  </script>
-</body>
+    function addExecutive() {
+      alert("👤 Executive Added (simulation)");
+    }
+
+    function addEvent() {
+      alert("📅 Event Added (simulation)");
+    }
+
+    function addBirthday() {
+      alert("🎂 Birthday Added (simulation)");
+    }
+
+    fetchPending();
+  </script></body>
 </html>
